# Games

./: .gitignore  .gitmodules  README.md
Tetris/: CMakeLists.txt  build  configure  run
Tetris/NCurses/: CMakeLists.txt  build  build_for_release.sh  configure  configure_for_release.sh  run
Tetris/NCurses/src/: Main.cpp  Ncurses_Tutorial.cpp
Tetris/NCurses/src/Game/: Game.cpp  Game.hpp  Timer.cpp  Timer.hpp
Tetris/NCurses/src/Tetrominos/: Tetrominos.cpp  Tetrominos.hpp  TetrominosGenerator.cpp  TetrominosGenerator.hpp
Tetris/OpenGL/: CMakeLists.txt  build.sh  configure.sh  run.sh
Tetris/OpenGL/src/: MainApplication.cpp
Tetris/OpenGL/src/GLRelated/: MatData.hpp
Tetris/OpenGL/src/GLRelated/Screen/: Screen.cpp  Screen.hpp
Tetris/OpenGL/src/GLRelated/Screen/Renderer/: Rectangle.cpp  Rectangle.hpp  ScreenRenderer.cpp  ScreenRenderer.hpp  TetrominoRenderer.cpp  TetrominoRenderer.hpp
Tetris/OpenGL/src/GLRelated/Screen/Shapes/: IShape.hpp  Rectangle.cpp  Rectangle.hpp
Tetris/OpenGL/src/GLRelated/Shaders/: Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp
Tetris/OpenGL/src/GLRelated/Shaders/ShaderSource/: ShaderSources.hpp
Tetris/OpenGL/src/GLRelated/Vertex/: ElementBuffer.cpp  ElementBuffer.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
Tetris/OpenGL/src/Logger/: CMakeLists.txt  Logger.cpp  Logger.hpp  String.cpp  String.hpp  UDPClientConnection.cpp  UDPClientConnection.hpp
Tetris/OpenGL/src/Logger/Linux/: UDPClientConnection.cpp  UDPClientConnection.hpp
Tetris/OpenGL/src/Logger/Windows/: UDPClientConnection.cpp  UDPClientConnection.hpp
Tetris/OpenGL/src/TetrisEngine/: Engine.cpp  Engine.hpp
Tetris/OpenGL/src/TetrisEngine/Map/: TetrisMap.cpp  TetrisMap.hpp
Tetris/OpenGL/src/TetrisEngine/MathLib/: TetrisMath.cpp  TetrisMath.hpp
Tetris/OpenGL/src/TetrisEngine/Tetromino/: ITetromino.hpp  Tetromino.cpp  Tetromino.hpp  TetrominoData.cpp  TetrominoData.hpp  TetrominoGenerator.cpp  TetrominoGenerator.hpp
Tetris/src/: Main.cpp
Tetris/src/ScreenHandler/: InputHandler.cpp  InputHandler.hpp  ScreenHandler.cpp  ScreenHandler.hpp  Timer.cpp  Timer.hpp
Tetris/src/Tetrominos/: Tetrominos.hpp  TetrominosGenerator.cpp  TetrominosGenerator.hpp
